--- a/windowedblankbutton.html
+++ b/windowedblankbutton.html
@@ -13,7 +13,7 @@ function MyWindow1() {
   var myWindow1 = window.open('', 'myWindow1', 'scrollbars=1,height='+screen.availHeight+',width='+screen.availWidth);
   myWindow1.document.write('<!DOCTYPE html>\n\
 <title>Google</title>\n\
-<p><iframe src="https://harmonious-brigadeiros-09b6fe.netlify.app/home" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%">\n\
+<p><iframe src="https://ltooelst.github.io/bookmrklets/home" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%">\n\
 <script>\n\
 <\x2fscript>');
 }
