--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,13 +6,14 @@
   <link href="a.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+      <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
   <script>document.addEventListener('contextmenu', event => event.preventDefault());document.onkeydown = (e) => {if(e.key==123){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'I'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'C'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'J'){e.preventDefault();}if(e.ctrlKey && e.key == 'U'){e.preventDefault();}};</script>
   <div class="card">
-    <img src="images/b.png" alt="Image">
+    <img src="images/b.png">
     <h2 style="top:0">about:blank</h2>
     <p class="Apps_bdesc__939Ky">Hides <i>Screen</i> From Dyknow <p style="color:blue; text-decoration: underline; cursor: url(cursors/pointer.png) 18 0, pointer; width: 47px; margin-left: 126.5px;" onclick="window.location.href='proof'">Proof</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn">Copy</button>
+      <button id="copy-text-btn" tabindex="-1">Copy</button>
       <p id="text" hidden>javascript:(function(){var url = prompt("Enter website url for about:blank proxy"); var win = window.open(); var iframe = win.document.createElement(%27iframe%27); iframe.style="position:fixed;width:100vw;height:100vh;top:0px;left:0px;right:0px;bottom:0px;z-index:2147483647;background-color:white;border:none;"; if(url.includes('https://') || url.includes("http://")) {iframe.src = url;}else{iframe.src = "http://" + url;} win.document.body.appendChild(iframe);})();</p>
       <script>
         function copyText(htmlElement) {
@@ -36,11 +36,11 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/d.png" alt="Image">
+    <img src="images/d.png">
     <h2 style="top:0">Anti-Tab Close</h2>
     <p class="Apps_bdesc__939Ky">Prevents <i>Dyknow</i> From Closing Displayed Tabs</p>
       <div class="Apps_app__T03gY">
-        <button id="openButton2" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
+        <button id="openButton2" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
           document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('openButton2').addEventListener('click', function() {
@@ -48,7 +48,7 @@
             });
           });
         </script>
-      <button id="copy-text-btn4">Copy</button>
+      <button id="copy-text-btn4" tabindex="-1">Copy</button>
       <p id="text4" hidden>javascript:(function () {window.onbeforeunload = function () { return 1;};})()</p>
       <script>
         function copyText(htmlElement) {
@@ -71,11 +71,11 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/autoclicker.gif" alt="Image">
+    <img src="images/autoclicker.gif">
     <h2 style="top:0">Auto Clicker</h2>
     <p class="Apps_bdesc__939Ky">Auto <i>Clicks</i> An Optional Amount Of CPS</p>
       <div class="Apps_app__T03gY">
-        <button id="openButton3" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
+        <button id="openButton3" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
           document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('openButton3').addEventListener('click', function() {
@@ -83,7 +83,7 @@
             });
           });
         </script>
-      <button id="copy-text-btn6">Copy</button>
+      <button id="copy-text-btn6" tabindex="-1">Copy</button>
       <p id="text6" hidden>javascript:(function(x,y){if(!window.click){window.click=true;document.body.style.cursor='crosshair';var cps=prompt('Autoclicker CPS: (Under 200 recommended)');if(!cps||isNaN(cps)){alert('You entered something wrong. Try running the script again.');end()}else{alert('Autoclicker activated at '+cps+' CPS! Press [ctrl+e] to stop.');addEventListener('mousemove',e=>{x=e.clientX,y=e.clientY});addEventListener('keydown',e=>{if(e.key==='e'&&e.ctrlKey){alert('Autoclicker deactivated! Click the bookmark again to reactivate!');end()}});if(window.click){var int=setInterval(function(){var el=document.elementFromPoint(x,y);if(el)el.click()},1000/cps);function end(){clearInterval(int);window.click=false;document.body.style.cursor='default'}}}}})();</p>
       <script>
         function copyText(htmlElement) {
@@ -106,11 +106,11 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/c.png" alt="Image">
+    <img src="images/c.png">
     <h2 style="top:0">Edit Page</h2>
     <p class="Apps_bdesc__939Ky">Edits <i>Anything</i> Of Your Choice (<b class="reload" style="color:blue; text-decoration: underline; cursor: url(cursors/pointer.png) 18 0, pointer;">Refresh</b> Page To Clear Edits)</p>
       <div class="Apps_app__T03gY">
-        <button id="openButton1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
+        <button id="openButton1" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
           document.addEventListener('DOMContentLoaded', function() {
             document.getElementById('openButton1').addEventListener('click', function() {
@@ -124,7 +124,7 @@
         location.reload();
         });
         </script>
-      <button id="copy-text-btn2">Copy</button>
+      <button id="copy-text-btn2" tabindex="-1">Copy</button>
       <p id="text2" hidden>javascript:document.body.contentEditable = 'true'; document.designMode='on'; void 0</p>
       <script>
         function copyText(htmlElement) {
@@ -147,11 +147,11 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/e.png" alt="Image">
+    <img src="images/e.png">
     <h2 style="top:0">Edpuzzle GUI</h2>
     <p class="Apps_bdesc__939Ky">A <i>GUI</i> For Edpuzzle That Includes External Features</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn5">Copy</button>
+      <button id="copy-text-btn5" tabindex="-1">Copy</button>
       <p id="text5" hidden>javascript: fetch("https://cdn.jsdelivr.net/gh/ading2210/edpuzzle-answers@latest/script.js").then(r => r.text()).then(r => eval(r))</p>
       <script>
         function copyText(htmlElement) {
@@ -174,11 +174,11 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/a.png" alt="Image">
+    <img src="images/a.png">
     <h2 style="top:0">History Flooder</h2>
     <p class="Apps_bdesc__939Ky">Floods <i>History</i> With An Optional Amount</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn1">Copy</button>
+      <button id="copy-text-btn1" tabindex="-1">Copy</button>
       <p id="text1" hidden>javascript:(e=>{var num=prompt('How Times Do You Want This Page To Show Up In Your History?%27);done=false;x=window.location.href;for (var i=1; i<=num; i++){history.pushState(0, 0, i==num?x:i.toString());if(i==num){done=true}}if(done===true){alert(%27Flooding Successful! %27+window.location.href+%27 Is Now In Your History %27+num+(num==1?%27 Time.%27:%27 Times. %27))}})()</p>
       <script>
         function copyText(htmlElement) {
@@ -200,11 +200,11 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/togglepage.gif" alt="Image">
+    <img src="images/togglepage.gif">
     <h2 style="top:0">PortaProxy</h2>
     <p class="Apps_bdesc__939Ky">Toggle <i>Any</i> Unblocked Page That Is IFrame-Accessible</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn3">Copy</button>
+      <button id="copy-text-btn3" tabindex="-1">Copy</button>
       <p id="text3" hidden>javascript:var $jscomp=$jscomp||{};$jscomp.scope={};$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a};$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){a.raw=b;return a};var frame=document.createElement("iframe");var url=prompt("What URL do you want to visit?");if(!url.startsWith("http://")&&!url.startsWith("https://")){url="http://"+url}frame.src=url;var stl=frame.style;stl.position="fixed";stl.left=stl.right=stl.top=stl.bottom=stl.margin=stl.border="0";stl.border="none";stl.width=stl.height="100%";stl.setProperty("z-index","9999");stl.setProperty("background-color","#FFFFFF");document.body.appendChild(frame);var btn=document.createElement("button");btn.addEventListener("click",function(){frame.style.display=frame.style.display=="none"?"block":"none"});btn.style="position: fixed;\nbottom: 0;\nright: 0;\nmargin: 20px;\nz-index: 99999;\nborder: none;\nfont-size: 14px;\npadding: 3px;\n";btn.innerHTML="Toggle";document.body.appendChild(btn);void 0;</p>
       <script>
         function copyText(htmlElement) {
