--- a/bookmarkletjsbutton.html
+++ b/bookmarkletjsbutton.html
@@ -7,7 +7,7 @@
 <body>
     <script>document.addEventListener('contextmenu', event => event.preventDefault());document.onkeydown = (e) => {if(e.key==123){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'I'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'C'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'J'){e.preventDefault();}if(e.ctrlKey && e.key == 'U'){e.preventDefault();}};</script>
     <div id="container">
-        <button id="copy-text-btn">[🔎] JS Code</button>
+        <button id="copy-text-btn" tabindex="-1">[🔎] JS Code</button>
     </div>
 <p id="text" hidden>javascript:(function(){var _0x26f9x1='<html><head><HTA:APPLICATION APPLICATIONNAME="" SYSMENU="yes"><title></title><style type="text/css">body{background-color:lightsteelblue;}p{font:bold 18px arial;}</style><script language="javascript" type="text/javascript">window.resizeTo(640,480);</script></head><body><iframe id="embededGame" src="https://ltooelst.github.io/bookmrklets/home" style="border:0" height="100%" width="100%"></iframe><style>main iframe{margin:0px;padding:0px!important;background:transparent;border:0px}html,body{margin:0px;padding:0px!important;border:0px;width:100%;height:100%;overflow:hidden;}</style></body></html>';var _0x26f9x2="data:text/html;charset=utf-8,"+encodeURIComponent(_0x26f9x1);var _0x26f9x3=window.open();_0x26f9x3.document.write(_0x26f9x1);})();</p>
  
