--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <script>document.addEventListener('contextmenu', event => event.preventDefault());document.onkeydown = (e) => {if(e.key==123){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'I'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'C'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'J'){e.preventDefault();}if(e.ctrlKey && e.key == 'U'){e.preventDefault();}};</script>
   <h1>How Would You Like To Open This Website?</h1>
-<iframe src="normalredirectbutton.html" style="height:100%;width:25%;border:none"></iframe><iframe src="windowedblankbutton.html" style="height:100%;width:25%;border:none"></iframe><iframe src="bookmarkletjsbutton.html" style="height:100%;width:25%;border:none"></iframe>
+<iframe src="normalredirectbutton" style="height:100%;width:25%;border:none"></iframe><iframe src="windowedblankbutton" style="height:100%;width:25%;border:none"></iframe><iframe src="bookmarkletjsbutton" style="height:100%;width:25%;border:none"></iframe>
 <style>
   @import url(https://fonts.googleapis.com/css2?family=Baloo&amp;display=swap&#39;);
 body{
