--- a/home.html
+++ b/home.html
@@ -10,10 +10,10 @@
   <script>document.addEventListener('contextmenu', event => event.preventDefault());document.onkeydown = (e) => {if(e.key==123){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'I'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'C'){e.preventDefault();}if(e.ctrlKey && e.shiftKey && e.key == 'J'){e.preventDefault();}if(e.ctrlKey && e.key == 'U'){e.preventDefault();}};</script>
   <div class="card">
     <img src="images/b.png">
-    <h2 style="top:0">about:blank</h2>
-    <p class="Apps_bdesc__939Ky">Hides <i>Screen</i> From Dyknow <p style="color:blue; text-decoration: underline; cursor: url(cursors/pointer.png) 18 0, pointer; width: 47px; margin-left: 126.5px;" onclick="window.location.href='proof'">Proof</p>
+    <h2 style="top:0;color:#FFFFFF">about:blank</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Hides <i>Screen</i> From Dyknow <p style="color:blue; text-decoration: underline; cursor: url(cursors/pointer.png) 18 0, pointer; width: 47px; margin-left: 126.5px;" onclick="window.location.href='proof'">Proof</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn" tabindex="-1">Copy</button>
+      <button id="copy-text-btn" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text" hidden>javascript:(function(){var url = prompt("Enter website url for about:blank proxy"); var win = window.open(); var iframe = win.document.createElement(%27iframe%27); iframe.style="position:fixed;width:100vw;height:100vh;top:0px;left:0px;right:0px;bottom:0px;z-index:2147483647;background-color:white;border:none;"; if(url.includes('https://') || url.includes("http://")) {iframe.src = url;}else{iframe.src = "http://" + url;} win.document.body.appendChild(iframe);})();</p>
       <script>
         function copyText(htmlElement) {
@@ -36,8 +36,8 @@
   </div>
   <div class="card">
     <img src="images/d.png">
-    <h2 style="top:0">Anti-Tab Close</h2>
-    <p class="Apps_bdesc__939Ky">Prevents <i>Dyknow</i> From Closing Displayed Tabs</p>
+    <h2 style="top:0;color:#FFFFFF">Anti-Tab Close</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Prevents <i>Dyknow</i> From Closing Displayed Tabs</p>
       <div class="Apps_app__T03gY">
         <button id="openButton2" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
@@ -47,7 +47,7 @@
             });
           });
         </script>
-      <button id="copy-text-btn4" tabindex="-1">Copy</button>
+      <button id="copy-text-btn4" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text4" hidden>javascript:(function () {window.onbeforeunload = function () { return 1;};})()</p>
       <script>
         function copyText(htmlElement) {
@@ -70,8 +70,8 @@
   </div>
   <div class="card">
     <img src="images/autoclicker.gif">
-    <h2 style="top:0">Auto Clicker</h2>
-    <p class="Apps_bdesc__939Ky">Auto <i>Clicks</i> An Optional Amount Of CPS</p>
+    <h2 style="top:0;color:#FFFFFF">Auto Clicker</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Auto <i>Clicks</i> An Optional Amount Of CPS</p>
       <div class="Apps_app__T03gY">
         <button id="openButton3" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
@@ -81,7 +81,7 @@
             });
           });
         </script>
-      <button id="copy-text-btn6" tabindex="-1">Copy</button>
+      <button id="copy-text-btn6" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text6" hidden>javascript:(function(x,y){if(!window.click){window.click=true;document.body.style.cursor='crosshair';var cps=prompt('Autoclicker CPS: (Under 200 recommended)');if(!cps||isNaN(cps)){alert('You entered something wrong. Try running the script again.');end()}else{alert('Autoclicker activated at '+cps+' CPS! Press [ctrl+e] to stop.');addEventListener('mousemove',e=>{x=e.clientX,y=e.clientY});addEventListener('keydown',e=>{if(e.key==='e'&&e.ctrlKey){alert('Autoclicker deactivated! Click the bookmark again to reactivate!');end()}});if(window.click){var int=setInterval(function(){var el=document.elementFromPoint(x,y);if(el)el.click()},1000/cps);function end(){clearInterval(int);window.click=false;document.body.style.cursor='default'}}}}})();</p>
       <script>
         function copyText(htmlElement) {
@@ -104,8 +104,8 @@
   </div>
   <div class="card">
     <img src="images/c.png">
-    <h2 style="top:0">Edit Page</h2>
-    <p class="Apps_bdesc__939Ky">Edits <i>Anything</i> Of Your Choice (<b class="reload" style="color:blue; text-decoration: underline; cursor: url(cursors/pointer.png) 18 0, pointer;">Refresh</b> Page To Clear Edits)</p>
+    <h2 style="top:0;color:#FFFFFF">Edit Page</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Edits <i>Anything</i> Of Your Choice (<b class="reload" style="color:blue; text-decoration: underline; cursor: url(cursors/pointer.png) 18 0, pointer;">Refresh</b> Page To Clear Edits)</p>
       <div class="Apps_app__T03gY">
         <button id="openButton1" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
@@ -121,7 +121,7 @@
         location.reload();
         });
         </script>
-      <button id="copy-text-btn2" tabindex="-1">Copy</button>
+      <button id="copy-text-btn2" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text2" hidden>javascript:document.body.contentEditable = 'true'; document.designMode='on'; void 0</p>
       <script>
         function copyText(htmlElement) {
@@ -144,10 +144,10 @@
   </div>
   <div class="card">
     <img src="images/e.png">
-    <h2 style="top:0">Edpuzzle GUI</h2>
-    <p class="Apps_bdesc__939Ky">A <i>GUI</i> For Edpuzzle That Includes External Features</p>
+    <h2 style="top:0;color:#FFFFFF">Edpuzzle GUI</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">A <i>GUI</i> For Edpuzzle That Includes External Features</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn5" tabindex="-1">Copy</button>
+      <button id="copy-text-btn5" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text5" hidden>javascript: fetch("https://cdn.jsdelivr.net/gh/ading2210/edpuzzle-answers@latest/script.js").then(r => r.text()).then(r => eval(r))</p>
       <script>
         function copyText(htmlElement) {
@@ -170,10 +170,10 @@
   </div>
   <div class="card">
     <img src="images/a.png">
-    <h2 style="top:0">History Flooder</h2>
-    <p class="Apps_bdesc__939Ky">Floods <i>History</i> With An Optional Amount</p>
+    <h2 style="top:0;color:#FFFFFF">History Flooder</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Floods <i>History</i> With An Optional Amount</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn1" tabindex="-1">Copy</button>
+      <button id="copy-text-btn1" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text1" hidden>javascript:(e=>{var num=prompt('How Times Do You Want This Page To Show Up In Your History?%27);done=false;x=window.location.href;for (var i=1; i<=num; i++){history.pushState(0, 0, i==num?x:i.toString());if(i==num){done=true}}if(done===true){alert(%27Flooding Successful! %27+window.location.href+%27 Is Now In Your History %27+num+(num==1?%27 Time.%27:%27 Times. %27))}})()</p>
       <script>
         function copyText(htmlElement) {
@@ -195,11 +195,45 @@
     </div>
   </div>
   <div class="card">
-    <img src="images/togglepage.gif">
-    <h2 style="top:0">PortaProxy</h2>
-    <p class="Apps_bdesc__939Ky">Toggle <i>Any</i> Unblocked Page That Is IFrame-Accessible</p>
+    <img src="images/g.png">
+    <h2 style="top:0;color:#FFFFFF">Piano</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Adds A <i>Playable</i> 8-bit Piano At The Bottom Of Your Screen</p>
       <div class="Apps_app__T03gY">
-      <button id="copy-text-btn3" tabindex="-1">Copy</button>
+        <button id="openButton5" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
+        <script>
+          document.addEventListener('DOMContentLoaded', function() {
+            document.getElementById('openButton5').addEventListener('click', function() {
+              window.location.assign('javascript:var _0xb301=["\x73\x63\x72\x69\x70\x74","\x63\x72\x65\x61\x74\x65\x45\x6C\x65\x6D\x65\x6E\x74","\x61\x70\x70\x65\x6E\x64\x43\x68\x69\x6C\x64","\x62\x6F\x64\x79","\x73\x72\x63","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x72\x61\x77\x67\x69\x74\x2E\x63\x6F\x6D\x2F\x4B\x72\x61\x7A\x65\x74\x65\x2F\x62\x6F\x6F\x6B\x6D\x61\x72\x6B\x6C\x65\x74\x73\x2F\x6D\x61\x73\x74\x65\x72\x2F\x70\x69\x61\x6E\x6F\x2E\x6A\x73"];(function(){var _0xb168x1=document[_0xb301[3]][_0xb301[2]](document[_0xb301[1]](_0xb301[0]));_0xb168x1[_0xb301[4]]= _0xb301[5]})()');
+            });
+          });
+        </script>
+      <button id="copy-text-btn8" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
+      <p id="text8" hidden>javascript:(function(){var js=document.body.appendChild(document.createElement('script'));js.src='https://rawgit.com/Krazete/bookmarklets/master/piano.js';})();</p>
+      <script>
+        function copyText(htmlElement) {
+          if(!htmlElement) {
+            return;
+          }            
+          let elementText = htmlElement.innerText;
+          let inputElement = document.createElement('input');
+          inputElement.setAttribute('value', elementText);
+          document.body.appendChild(inputElement);
+          inputElement.select();
+          document.execCommand('copy');
+          inputElement.parentNode.removeChild(inputElement);
+        }
+        document.querySelector('#copy-text-btn8').onclick = function() {
+          copyText(document.querySelector('#text8'));
+        }
+      </script>
+    </div>
+  </div>
+  <div class="card">
+    <img src="images/togglepage.gif">
+    <h2 style="top:0;color:#FFFFFF">PortaProxy</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Toggle <i>Any</i> ‌U‌n‌b‌l‌o‌c‌k‌e‌d‌ Page That Is IFrame-Accessible</p>
+      <div class="Apps_app__T03gY">
+      <button id="copy-text-btn3" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text3" hidden>javascript:var $jscomp=$jscomp||{};$jscomp.scope={};$jscomp.createTemplateTagFirstArg=function(a){return a.raw=a};$jscomp.createTemplateTagFirstArgWithRaw=function(a,b){a.raw=b;return a};var frame=document.createElement("iframe");var url=prompt("What URL do you want to visit?");if(!url.startsWith("http://")&&!url.startsWith("https://")){url="http://"+url}frame.src=url;var stl=frame.style;stl.position="fixed";stl.left=stl.right=stl.top=stl.bottom=stl.margin=stl.border="0";stl.border="none";stl.width=stl.height="100%";stl.setProperty("z-index","9999");stl.setProperty("background-color","#FFFFFF");document.body.appendChild(frame);var btn=document.createElement("button");btn.addEventListener("click",function(){frame.style.display=frame.style.display=="none"?"block":"none"});btn.style="position: fixed;\nbottom: 0;\nright: 0;\nmargin: 20px;\nz-index: 99999;\nborder: none;\nfont-size: 14px;\npadding: 3px;\n";btn.innerHTML="Toggle";document.body.appendChild(btn);void 0;</p>
       <script>
         function copyText(htmlElement) {
@@ -222,8 +256,8 @@
   </div>
   <div class="card">
     <img src="images/f.png">
-    <h2 style="top:0">X-Ray Goggles</h2>
-    <p class="Apps_bdesc__939Ky">Viewable And Editable <i>Page Source</i> Just Like Inspect Element</p>
+    <h2 style="top:0;color:#FFFFFF">X-Ray Goggles</h2>
+    <p class="Apps_bdesc__939Ky" style="color:#FFFFFF">Viewable And Editable <i>Page Source</i> Just Like Inspect Element</p>
       <div class="Apps_app__T03gY">
         <button id="openButton4" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Execute</button>
         <script>
@@ -233,13 +267,7 @@
             });
           });
         </script>
-        <script>
-        const refreshButton = document.querySelector('.reload');
-        refreshButton.addEventListener('click', function() {
-        location.reload();
-        });
-        </script>
-      <button id="copy-text-btn7" tabindex="-1">Copy</button>
+      <button id="copy-text-btn7" tabindex="-1" style="background:#08080;color:#FFFFFF;border-radius:15px;border:0">Copy</button>
       <p id="text7" hidden>javascript:(function () {var script=document.createElement('script');script.src='https://x-ray-goggles.mouse.org/webxray.js';script.className='webxray';script.setAttribute('data-lang','en-US');script.setAttribute('data-baseuri','https://x-ray-goggles.mouse.org');document.body.appendChild(script);}())</p>
       <script>
         function copyText(htmlElement) {
